@@ -1,3 +1,7 @@
+2011-12-20    <h.v.raven@googlemail.com>
+
+	* src/level.cpp (print): changed map-call to find for constness
+
 2011-12-18    <h.v.raven@googlemail.com>
 
 	* src/spell.h (Spell): added get-functions
